--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,21 @@ code {
   align-items: center;
   justify-content: space-around;
   flex: 1 1 auto;
-  width: 30%;
-  height: 120px;
+  width: 250px;
+  height: 125px;
   margin: 10px;
   border: 1px gray solid;
   border-radius: 10px;
 }
 
 .pokedex-container {
+  background-color: lightgoldenrodyellow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pokedex-cards-container {
   background-color: skyblue;
   display: flex;
   flex-wrap: wrap;
@@ -42,5 +49,18 @@ code {
   background-color: black;
   color: white;
   height: 100px;
+}
+
+.filter-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  width: 100%;
+  height: 50px;
   margin-bottom: 20px;
+}
+
+.search-text-input{
+  margin: 20px 0;
 }
